message MSG_IMPAWN_BET_CLIM
{
   required uint32   msgID = 1; // 消息ID
   optional uint32   pid = 2; // 玩家ID（客户端不用传）
   optional bool     isTwo = 3; // 是否押2
   optional uint64   coinSum = 4; // 押分金额
}